Initial gridworld impl

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,33 +2,33 @@ set(SIMULATOR_SRCS
     sim.hpp sim.cpp
 )
 
-add_library(simple_example_cpu_impl STATIC
+add_library(gridworld_madrona_cpu_impl STATIC
     ${SIMULATOR_SRCS}
 )
 
-target_link_libraries(simple_example_cpu_impl
+target_link_libraries(gridworld_madrona_cpu_impl
     PUBLIC
         madrona_mw_core
     PRIVATE
         madrona_common
 )
 
-add_library(simple_example_mgr SHARED
+add_library(gridworld_madrona_mgr SHARED
     mgr.hpp mgr.cpp
 )
 
-target_link_libraries(simple_example_mgr PRIVATE
+target_link_libraries(gridworld_madrona_mgr PRIVATE
     madrona_python_utils
     madrona_common
     madrona_importer
-    simple_example_cpu_impl
     madrona_mw_cpu
+    gridworld_madrona_cpu_impl
 )
 
 if (TARGET madrona_mw_gpu)
     madrona_build_compile_defns(
         OUT_TARGET
-            simple_example_gpu_srcs
+            gridworld_madrona_gpu_srcs
         SOURCES_DEFN
             SIMPLE_SRC_LIST
         FLAGS_DEFN
@@ -37,21 +37,21 @@ if (TARGET madrona_mw_gpu)
             ${SIMULATOR_SRCS}
     )
 
-    target_link_libraries(simple_example_mgr PRIVATE
-        simple_example_gpu_srcs
+    target_link_libraries(_mgr PRIVATE
+        gridworld_madrona_gpu_srcs
         madrona_mw_gpu
     )
 endif()
 
-target_compile_definitions(simple_example_mgr PRIVATE
+target_compile_definitions(gridworld_madrona_mgr PRIVATE
     -DDATA_DIR="${CMAKE_CURRENT_SOURCE_DIR}/../data/"
 )
 
-madrona_python_module(madrona_simple_example_python
+madrona_python_module(gridworld_madrona
     bindings.cpp
 )
 
-target_link_libraries(madrona_simple_example_python PRIVATE
+target_link_libraries(gridworld_madrona PRIVATE
     madrona_hdrs
-    simple_example_mgr
+    gridworld_madrona_mgr
 )
